--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^0.9.0",
     "bcryptjs": "^2.1.0",
     "body-parser": "^1.11.0",
+    "cookie-parser": "^1.3.3",
     "express": "^4.11.2",
     "jwt-simple": "^0.2.0",
     "lodash": "^3.1.0",
