--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.1",
   "description": "keep all your favorite shows in one place",
   "scripts": {
-    "test": "karma start public/test/karma.conf.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "agenda": "^0.6.27",
     "async": "^0.9.0",
     "bcryptjs": "^2.1.0",
     "body-parser": "^1.11.0",
+    "compression": "^1.4.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.2",
     "jwt-simple": "^0.2.0",
@@ -21,6 +22,7 @@
     "nodemailer": "^1.3.0",
     "request": "^2.53.0",
     "sugar": "^1.4.1",
+    "uncss": "^0.12.0",
     "xml2js": "^0.4.4"
   },
   "devDependencies": {
