--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.4.0",
     "cookie-parser": "^1.3.3",
     "express": "^4.11.2",
+    "express-session": "^1.10.2",
     "jwt-simple": "^0.2.0",
     "lodash": "^3.1.0",
     "method-override": "^2.3.1",
@@ -20,6 +21,8 @@
     "mongoose": "^3.8.22",
     "morgan": "^1.5.1",
     "nodemailer": "^1.3.0",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "request": "^2.53.0",
     "sugar": "^1.4.1",
     "uncss": "^0.12.0",
